# SG_MM

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
docs/: api_contracts.md  architecture.md  business_rules.md  el_validation.md  issues_to_review.md  llm_prompts.md  phases_plan.md  quality_safeguards.md  rag_design.md  spec.md
docs/legacy/original_source/: CLAUDE.md  config.yaml  main.py  requirements.txt  run_as_admin.bat  update_pr.py
docs/legacy/original_source/docs/: LLM_切換使用說明書.md
docs/legacy/original_source/memory/: daily_budget.json  fail_patterns.md
docs/legacy/original_source/openclaw_skill/: README.md  index.js  skill.json
docs/legacy/original_source/scripts/: generate_and_compile.py  verify_mc_connection.py
docs/legacy/original_source/src/api/: app.py
docs/legacy/original_source/src/db/: init_db.py  models.py
docs/legacy/original_source/src/interfaces/: _report_utils.py  html_report.py  pdf_report.py
docs/legacy/original_source/src/strategies/: ma_cross.py  registry.py  (+1 more)
docs/legacy/original_source/subprojects/strategygen/: .env.example  .gitignore  config.yaml  pyproject.toml
docs/legacy/original_source/subprojects/strategygen/src/strategygen/: data_adapter.py
docs/legacy/original_source/subprojects/strategygen/src/strategygen/ai_engine/: memory.py  optimizer_ai.py  researcher.py  retriever.py  strategy_loader.py
docs/legacy/original_source/subprojects/strategygen/src/strategygen/ai_engine/prompt_templates/: generate.md  generate_el.md
docs/legacy/original_source/subprojects/strategygen/src/strategygen/backtest/: base_strategy.py  metrics.py  python_bt.py  registry.py  wfa.py
docs/phase_reports/: phase_1_report.md  phase_2_report.md
scripts/: eval_rag.py  index_library.py  migrate_db.py
src/core/: config.py  db.py
src/core/ai_engine/: vector_store.py
src/core/data/: etl.py  trading_day.py
tests/: rag_test_set.yaml
tests/unit/: test_config.py
tests/unit/data/: test_trading_day.py
(+24 files in other folders)
