[project]
name = "aismart"
version = "0.1.0"
description = "AI-assisted TAIFEX strategy R&D platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=0.10",
    "sentence-transformers>=3.0",
    "torch>=2.4",
    "anthropic>=0.39",
    "openai>=1.50",
    "httpx>=0.27",
    "vectorbt>=0.26",
    "backtrader>=1.9",
    "typer>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "black>=24.10",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
